# SublimationPrintOS

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: 20000.txt  DEVELOPMENT_WORKFLOW.md  PHASE_PLAN.md  PRODUCT_BRIEF.md  README.md  SublimationPrintOS_API_Development_Guide.md  SublimationPrintOS_API_Documentation.md  SublimationPrintOS_Access_Control_Spec.md  SublimationPrintOS_Accessibility_Guide.md  SublimationPrintOS_Admin_Manual.md  SublimationPrintOS_Audit_Log_Spec.md  SublimationPrintOS_Backend_Development_Guide.md  SublimationPrintOS_Backup_Strategy.md  SublimationPrintOS_Barcode_Scanner_Integration.md  SublimationPrintOS_Bug_Report_Template.md  SublimationPrintOS_Build_Process.md  SublimationPrintOS_Caldera_Integration_Guide.md  SublimationPrintOS_Canvas_Engine_Spec.md  SublimationPrintOS_Change_Management.md  SublimationPrintOS_Change_Management_Process.md  SublimationPrintOS_Code_Review_Process.md  SublimationPrintOS_Code_Structure.md  SublimationPrintOS_Coding_Standards.md  SublimationPrintOS_Color_Accuracy_Test.md  SublimationPrintOS_Color_Palette.md  SublimationPrintOS_Component_Library.md  SublimationPrintOS_Cutter_Integration_Guide.md  SublimationPrintOS_Cutter_Integration_Spec.md  (+101 more)
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_paths.rs  commands.rs  database.rs  diagnostics.rs  engine.rs  file_utils.rs  health.rs  logging.rs  main.rs  migrations.rs  recovery.rs  settings.rs  shell_actions.rs  storage.rs  updates.rs  upscale_intake.rs  upscale_processing.rs
(+162 files in other folders)
