[package]
name = "sublimation-print-os"
version = "0.1.0"
description = "Phase 0 foundation scaffold for SublimationPrintOS"
authors = ["SublimationPrintOS"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
